<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_container"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_gravity="center"
        android:background="@color/xiaomiYellow" >

        <ImageView
            android:id="@+id/goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="5dip"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/title"
            style="@style/title_text"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sms_content" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/all_setting_list_top_bg"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flag"
                    android:textColor="@color/class_B"
                    android:textSize="14dip" />

                <TextView
                    android:id="@+id/flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/class_D"
                    android:textSize="14dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/all_setting_list_center_bg"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/safetype"
                    android:textColor="@color/class_B"
                    android:textSize="14dip" />

                <TextView
                    android:id="@+id/safetype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/read_color"
                    android:textSize="14dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/all_setting_list_center_bg"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostname"
                    android:textColor="@color/class_B"
                    android:textSize="14dip" />

                <TextView
                    android:id="@+id/hostname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/class_D"
                    android:textSize="14dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/all_setting_list_center_bg"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/machine_ip"
                    android:textColor="@color/class_B"
                    android:textSize="14dip" />

                <TextView
                    android:id="@+id/ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/class_D"
                    android:textSize="14dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/all_setting_list_center_bg"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warings_content"
                    android:textColor="@color/class_B"
                    android:textSize="14dip" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip"
                    android:textColor="@color/class_D"
                    android:textSize="14dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/all_setting_list_center_bg"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warings_time"
                    android:textColor="@color/class_B"
                    android:textSize="14dip" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/class_D"
                    android:textSize="14dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/all_setting_list_bottom_bg"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg"
                    android:textColor="@color/class_B"
                    android:textSize="14dip" />

                <TextView
                    android:id="@+id/msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:textColor="@color/class_D"
                    android:textSize="12dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>